commit by anurag

--- a/index.html
+++ b/index.html
@@ -59,20 +59,33 @@
         </div>
         <div class="stats">
             <h2>Trusted by over 15,000 companies and millions of learners around the world</h2>
-            <hr>
-            <div class="companies">
+            <hr> 
+            <div class="companies marquee">
                 <img src="./Companies/meta.webp" alt="">
                 <img src="./Companies/dell.png" alt="">
                 <img src="./Companies/google.png" alt="">
                 <img src="./Companies/IBM.png" alt="">
+                <img src="./Companies/microsoft.png" alt="">
                 <img src="./Companies/TCS.png" alt="">
                 <img src="./Companies/amazon.png" alt="">
-                <img src="./Companies/oracle.png" alt="">
+                <img src="./Companies/HCL.png" alt="">
+                <img src="./Companies/LTIMindtree.png" alt="">
+                <img src="./Companies/SAP.png" alt="">
+                <img src="./Companies/wipro.png" alt="">
+                <img src="./Companies/Deloitte.avif" alt="">
+                <img src="./Companies/Accenture.png" alt="">
+                <img src="./Companies/Reliance.png" alt="">
+                <img src="./Companies/cisco.png" alt="">
+                <img src="./Companies/Infosys.png" alt="">
+
             </div>
+        </div>
+        <div class="background">
+            <h1>hello!</h1>
         </div>
         <div class="join-us">
             <div class="join-us-left">
-                <h1>Grow every day</h1>
+                <h1>Knowledge is power</h1>
                 <h3>Grow every day with our tailored courses for non-IT students. Gain technical skills, enhance your
                     career, and embrace the digital world with confidence. Start your journey towards continuous growth
                     today.</h3>
