commit by anurag

--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
             </form>
 
             <div class="illustrations">
-                <img src="./image/confused 2a.png" alt="Person with telescope" class="homeb-img">
-                <img src="./image/search.png" alt="Person with laptop on bench" class="home-img">
+                <img src="./image/confused.png" alt="Person with telescope" class="homeb-img">
+                <img src="./image/searching.png" alt="Person with laptop on bench" class="home-img">
                 <img src="./image/learning.png" alt="Person riding bicycle" class="home-img">
-                <img src="./image/achievement.png" alt="Person with diploma" class="homeb-img">
+                <img src="./image/progress.png" alt="Person with diploma" class="homeb-img">
             </div>
         </div>
         <div class="stats">
             <h2>Trusted by over 15,000 companies and millions of learners around the world</h2>
-            <hr> 
+            <hr>
             <div class="companies marquee">
                 <img src="./Companies/meta.webp" alt="">
                 <img src="./Companies/dell.png" alt="">
@@ -68,7 +68,6 @@
                 <img src="./Companies/microsoft.png" alt="">
                 <img src="./Companies/TCS.png" alt="">
                 <img src="./Companies/amazon.png" alt="">
-                <img src="./Companies/HCL.png" alt="">
                 <img src="./Companies/LTIMindtree.png" alt="">
                 <img src="./Companies/SAP.png" alt="">
                 <img src="./Companies/wipro.png" alt="">
@@ -80,8 +79,88 @@
 
             </div>
         </div>
+
         <div class="background">
-            <h1>hello!</h1>
+            <h1>Essential Technical Skills for Today's Learners: A Comprehensive Guide</h1>
+            <div class="card">
+                <div class="card-icon">
+                    <i class="fa-solid fa-book"></i>
+                </div>
+                <div class="card-content">
+                    <h3>Web Development</h3>
+                    <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-icon">
+                    <i class="fa-solid fa-book"></i>
+                </div>
+                <div class="card-content">
+                    <h3>Backend Development</h3>
+                    <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-icon">
+                    <i class="fa-solid fa-book"></i>
+                </div>
+                <div class="card-content">
+                    <h3>Data Science</h3>
+                    <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-icon">
+                    <i class="fa-solid fa-book"></i>
+                </div>
+                <div class="card-content">
+                    <h3>Mobile App Development</h3>
+                    <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-icon">
+                    <i class="fa-solid fa-book"></i>
+                </div>
+                <div class="card-content">
+                    <h3>Cybersecurity</h3>
+                    <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-icon">
+                    <i class="fa-solid fa-book"></i>
+                </div>
+                <div class="card-content">
+                    <h3>Cloud Computing</h3>
+                    <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-icon">
+                    <i class="fa-solid fa-book"></i>
+                </div>
+                <div class="card-content">
+                    <h3>Artificial Intelligence</h3>
+                    <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-icon">
+                    <i class="fa-solid fa-book"></i>
+                </div>
+                <div class="card-content">
+                    <h3>DevOps</h3>
+                    <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+                </div>
+            </div>
         </div>
         <div class="join-us">
             <div class="join-us-left">
