commit by anurag

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             </div>
         </div>
         <div class="stats">
-            <h2>Trusted by over 15,000 companies and millions of learners around the world</h2>
+            <h2>Trusted by over <span> 15,000 companies </span> and <span> millions of learners </span> around the world
+            </h2>
             <hr>
             <div class="companies marquee">
                 <img src="./Companies/meta.webp" alt="">
@@ -71,7 +72,7 @@
                 <img src="./Companies/LTIMindtree.png" alt="">
                 <img src="./Companies/SAP.png" alt="">
                 <img src="./Companies/wipro.png" alt="">
-                <img src="./Companies/Deloitte.avif" alt="">
+                <img src="./Companies/Deloitte.png" alt="">
                 <img src="./Companies/Accenture.png" alt="">
                 <img src="./Companies/Reliance.png" alt="">
                 <img src="./Companies/cisco.png" alt="">
@@ -82,95 +83,146 @@
 
         <div class="background">
             <h1>Essential Technical Skills for Today's Learners: A Comprehensive Guide</h1>
-            <div class="card">
-                <div class="card-icon">
-                    <i class="fa-solid fa-book"></i>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-icon">
+                        <i class="fa-solid fa-book"></i>
+                    </div>
+                    <div class="card-content">
+                        <h3>Web Development</h3>
+                        <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+                    </div>
                 </div>
-                <div class="card-content">
-                    <h3>Web Development</h3>
-                    <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
-                </div>
-            </div>
 
-            <div class="card">
-                <div class="card-icon">
-                    <i class="fa-solid fa-book"></i>
+                <div class="card">
+                    <div class="card-icon">
+                        <i class="fa-solid fa-book"></i>
+                    </div>
+                    <div class="card-content">
+                        <h3>Backend Development</h3>
+                        <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+                    </div>
                 </div>
-                <div class="card-content">
-                    <h3>Backend Development</h3>
-                    <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
-                </div>
-            </div>
 
-            <div class="card">
-                <div class="card-icon">
-                    <i class="fa-solid fa-book"></i>
+                <div class="card">
+                    <div class="card-icon">
+                        <i class="fa-solid fa-book"></i>
+                    </div>
+                    <div class="card-content">
+                        <h3>Data Science</h3>
+                        <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+                    </div>
                 </div>
-                <div class="card-content">
-                    <h3>Data Science</h3>
-                    <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
-                </div>
-            </div>
 
-            <div class="card">
-                <div class="card-icon">
-                    <i class="fa-solid fa-book"></i>
+                <div class="card">
+                    <div class="card-icon">
+                        <i class="fa-solid fa-book"></i>
+                    </div>
+                    <div class="card-content">
+                        <h3>Mobile App Development</h3>
+                        <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+                    </div>
                 </div>
-                <div class="card-content">
-                    <h3>Mobile App Development</h3>
-                    <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
-                </div>
-            </div>
 
-            <div class="card">
-                <div class="card-icon">
-                    <i class="fa-solid fa-book"></i>
+                <div class="card">
+                    <div class="card-icon">
+                        <i class="fa-solid fa-book"></i>
+                    </div>
+                    <div class="card-content">
+                        <h3>Cybersecurity</h3>
+                        <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+                    </div>
                 </div>
-                <div class="card-content">
-                    <h3>Cybersecurity</h3>
-                    <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
-                </div>
-            </div>
 
-            <div class="card">
-                <div class="card-icon">
-                    <i class="fa-solid fa-book"></i>
+                <div class="card">
+                    <div class="card-icon">
+                        <i class="fa-solid fa-book"></i>
+                    </div>
+                    <div class="card-content">
+                        <h3>Cloud Computing</h3>
+                        <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+                    </div>
                 </div>
-                <div class="card-content">
-                    <h3>Cloud Computing</h3>
-                    <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
-                </div>
-            </div>
 
-            <div class="card">
-                <div class="card-icon">
-                    <i class="fa-solid fa-book"></i>
+                <div class="card">
+                    <div class="card-icon">
+                        <i class="fa-solid fa-book"></i>
+                    </div>
+                    <div class="card-content">
+                        <h3>Artificial Intelligence</h3>
+                        <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+                    </div>
                 </div>
-                <div class="card-content">
-                    <h3>Artificial Intelligence</h3>
-                    <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
-                </div>
-            </div>
 
-            <div class="card">
-                <div class="card-icon">
-                    <i class="fa-solid fa-book"></i>
+                <div class="card">
+                    <div class="card-icon">
+                        <i class="fa-solid fa-book"></i>
+                    </div>
+                    <div class="card-content">
+                        <h3>DevOps</h3>
+                        <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+                    </div>
                 </div>
-                <div class="card-content">
-                    <h3>DevOps</h3>
-                    <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+
+                <div class="card">
+                    <div class="card-icon">
+                        <i class="fa-solid fa-book"></i>
+                    </div>
+                    <div class="card-content">
+                        <h3>Internet of Things (IoT)</h3>
+                        <p>55 Courses <i class="fa-solid fa-arrow-right"></i></p>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <div class="careers">
+            <h1>Boost Your Career with Our Free Tools and Assessments</h1>
+            <div class="box-container">
+                <div class="box">
+                    <div class="box-header">
+                        <h3>Resumé Builder</h3>
+                        <span class="notification">1</span>
+                    </div>
+                    <div class="box-content">
+                        <p>Let employers know how skilled you are with our free Resumé Builder!</p>
+                        <a href="#">Create Your Free Resumé</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="box-header">
+                        <h3>Workplace Personality Assessment</h3>
+                        <span class="notification">1</span>
+                    </div>
+                    <div class="box-content">
+                        <p>Preferred by 80% employers, take our Workplace Personality Assessment to discover who you truly are</p>
+                        <a href="#">Start Your Free Assessment</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="box-header">
+                        <h3>Mental Wellbeing Check-Up</h3>
+                        <span class="notification">1</span>
+                    </div>
+                    <div class="box-content">
+                        <p>Measure your emotional and physical wellbeing by answering a set of questions</p>
+                        <a href="#">Assess Your Mental Wellbeing</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="join-us">
             <div class="join-us-left">
                 <h1>Knowledge is power</h1>
-                <h3>Grow every day with our tailored courses for non-IT students. Gain technical skills, enhance your
-                    career, and embrace the digital world with confidence. Start your journey towards continuous growth
+                <h3>Grow every day with our tailored courses for non-IT students. Gain technical skills, enhance
+                    your
+                    career, and embrace the digital world with confidence. Start your journey towards continuous
+                    growth
                     today.</h3>
             </div>
             <div class="join-us-right">
-                <img src="./image/joinUSimg.png" alt="">
+                <img src="./image/Community.png" alt="">
             </div>
         </div>
     </section>
