commit by anurag

--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
             <h1>Boost Your Career with Our Free Tools and Assessments</h1>
             <div class="box-container">
                 <div class="box">
+                    <h3>Resumé Builder</h3>
                     <div class="box-header">
-                        <h3>Resumé Builder</h3>
-                        <span class="notification">1</span>
+                        <img src="./image/resume.jpg" alt="">
                     </div>
                     <div class="box-content">
                         <p>Let employers know how skilled you are with our free Resumé Builder!</p>
@@ -190,19 +190,19 @@
                     </div>
                 </div>
                 <div class="box">
+                    <h3>Workplace Personality Assessment</h3>
                     <div class="box-header">
-                        <h3>Workplace Personality Assessment</h3>
-                        <span class="notification">1</span>
+                        <img src="./image/workplace.jpg" alt="">
                     </div>
                     <div class="box-content">
-                        <p>Preferred by 80% employers, take our Workplace Personality Assessment to discover who you truly are</p>
+                        <p>Preferred by 80% employers, take our Workplace Personality Assessments</p>
                         <a href="#">Start Your Free Assessment</a>
                     </div>
                 </div>
                 <div class="box">
+                    <h3>Mental Wellbeing Check-Up</h3>
                     <div class="box-header">
-                        <h3>Mental Wellbeing Check-Up</h3>
-                        <span class="notification">1</span>
+                        <img src="./image/health.jpg" alt="">
                     </div>
                     <div class="box-content">
                         <p>Measure your emotional and physical wellbeing by answering a set of questions</p>
@@ -215,17 +215,50 @@
         <div class="join-us">
             <div class="join-us-left">
                 <h1>Knowledge is power</h1>
-                <h3>Grow every day with our tailored courses for non-IT students. Gain technical skills, enhance
-                    your
-                    career, and embrace the digital world with confidence. Start your journey towards continuous
-                    growth
-                    today.</h3>
+                <p>Knowledge is power. Transform your career by mastering IT skills with our tailored courses for non-IT students. Empower yourself with the technical knowledge needed to succeed in the digital age.</p>
             </div>
             <div class="join-us-right">
                 <img src="./image/Community.png" alt="">
             </div>
         </div>
     </section>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-row">
+                <div class="footer-column">
+                    <h3>About Us</h3>
+                    <p>We provide free online courses to help students from non-IT backgrounds learn technical skills from scratch and advance their careers.</p>
+                </div>
+                <div class="footer-column">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="home.html">Home</a></li>
+                        <li><a href="courses.html">Courses</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3>Follow Us</h3>
+                    <div class="social-icons">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="footer-column">
+                    <h3>Contact Us</h3>
+                    <p><i class="fas fa-map-marker-alt"></i> Sage University, Indore</p>
+                    <p><i class="fas fa-phone"></i> +91 XXXXXXXXXXX</p>
+                    <p><i class="fas fa-envelope"></i> pardeshianurag22@gmail.com</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 TechNewbies. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
     <!--header section ends-->
 
 </body>
