commit by anurag

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
             <a href="myprofile"><i class="fa-solid fa-user"></i> profile</a>
         </div>
     </div>
-
+    <!--header section ends-->
+    <!--homepage section starts-->
     <section class="home-page">
+        <!--intro section starts-->
         <div class="intro">
 
             <h1>Free Online Courses With Certificates & Diplomas</h1>
@@ -57,6 +59,8 @@
                 <img src="./image/progress.png" alt="Person with diploma" class="homeb-img">
             </div>
         </div>
+        <!--intro section starts-->
+        <!--stats section starts-->
         <div class="stats">
             <h2>Trusted by over <span> 15,000 companies </span> and <span> millions of learners </span> around the world
             </h2>
@@ -80,7 +84,8 @@
 
             </div>
         </div>
-
+        <!--stats section ends-->
+        <!--background section starts-->
         <div class="background">
             <h1>Essential Technical Skills for Today's Learners: A Comprehensive Guide</h1>
             <div class="card-container">
@@ -175,7 +180,8 @@
                 </div>
             </div>
         </div>
-
+        <!--background section ends-->
+        <!--career section starts-->
         <div class="careers">
             <h1>Boost Your Career with Our Free Tools and Assessments</h1>
             <div class="box-container">
@@ -215,19 +221,23 @@
         <div class="join-us">
             <div class="join-us-left">
                 <h1>Knowledge is power</h1>
-                <p>Knowledge is power. Transform your career by mastering IT skills with our tailored courses for non-IT students. Empower yourself with the technical knowledge needed to succeed in the digital age.</p>
+                <p>Knowledge is power. Transform your career by mastering IT skills with our tailored courses for non-IT
+                    students. Empower yourself with the technical knowledge needed to succeed in the digital age.</p>
             </div>
             <div class="join-us-right">
                 <img src="./image/Community.png" alt="">
             </div>
         </div>
     </section>
+    <!--careers section ends-->
+    <!--footer section ends-->
     <footer>
         <div class="footer-container">
             <div class="footer-row">
                 <div class="footer-column">
                     <h3>About Us</h3>
-                    <p>We provide free online courses to help students from non-IT backgrounds learn technical skills from scratch and advance their careers.</p>
+                    <p>We provide free online courses to help students from non-IT backgrounds learn technical skills
+                        from scratch and advance their careers.</p>
                 </div>
                 <div class="footer-column">
                     <h3>Quick Links</h3>
@@ -259,17 +269,11 @@
             </div>
         </div>
     </footer>
-    <!--header section ends-->
+    <!--footer section ends-->
 
 </body>
 
 </html>
-
-
-
-
-
-
 <script src="./script.js"></script>
 </body>
 
