commit by anurag

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         </div>
         <div class="nav">
             <a href="courses.html"><span>Explore Courses</span></a>
-            <a href="teachers.html"><span>Teachers</span></a>
+            <a href="live.html"><span>Live</span></a>
             <a href="about.html"><span>About us</span></a>
             <a href="contact.html"><span>Contact us</span></a>
-        </div>
+        </div>`
 
         <div class="profile">
             <a href="#"><i class="fa-solid fa-fire"></i> 7 days</a>
@@ -53,10 +53,10 @@
             </form>
 
             <div class="illustrations">
-                <img src="./image/confused.png" alt="Person with telescope" class="homeb-img">
-                <img src="./image/searching.png" alt="Person with laptop on bench" class="home-img">
-                <img src="./image/learning.png" alt="Person riding bicycle" class="home-img">
-                <img src="./image/progress.png" alt="Person with diploma" class="homeb-img">
+                <img src="./image/confused.png" alt="Person with telescope" class="homeb-img responsive">
+                <img src="./image/searching.png" alt="Person with laptop on bench" class="home-img responsive">
+                <img src="./image/learning.png" alt="Person riding bicycle" class="home-img responsive">
+                <img src="./image/progress.png" alt="Person with diploma" class="homeb-img hide responsive">
             </div>
         </div>
         <!--intro section starts-->
@@ -223,10 +223,12 @@
                 <h1>Knowledge is power</h1>
                 <p>Knowledge is power. Transform your career by mastering IT skills with our tailored courses for non-IT
                     students. Empower yourself with the technical knowledge needed to succeed in the digital age.</p>
+                <div class="buttons">
+                    <a href="Courses.html" class="join-free">Explore Courses</a>
+                    <a href="#" class="business">Join our community</a>
+                </div>
             </div>
-            <div class="join-us-right">
-                <img src="./image/Community.png" alt="">
-            </div>
+        
         </div>
     </section>
     <!--careers section ends-->
