commit by anurag

--- a/index.html
+++ b/index.html
@@ -35,9 +35,17 @@
             <a href="contact.html"><span>Contact us</span></a>
         </div>`
 
-        <div class="profile">
-            <a href="#"><i class="fa-solid fa-fire"></i> 7 days</a>
-            <a href="myprofile"><i class="fa-solid fa-user"></i> profile</a>
+        <div class="profile"><i class="fa-solid fa-user"></i>
+        </div>
+        <div class="profilei">
+            <img src="./images/profilepic01.png" alt="profile pic" height="100px">
+            <h3>Anurag Pardeshi</h3>
+            <span>student</span>
+            <a href="myProfile.html" class="btn">view profile</a>
+            <div class="flex-btn">
+                <a href="login.html" class="option-btn">login</a>
+                <a href="register.html" class="option-btn">register</a>
+            </div>
         </div>
     </div>
     <!--header section ends-->
@@ -46,7 +54,7 @@
         <!--intro section starts-->
         <div class="intro">
 
-            <h1>Free Online Courses With Certificates & Diplomas</h1>
+            <h1>Free e-Learning Courses with Certificates & Diplomas</h1>
             <form action="" class="home-search-form">
                 <input type="text" name="home-search" placeholder="What do you want to learn today?" required>
                 <button type="submit" class="fa-solid fa-magnifying-glass" name="home-search-btn"></button>
@@ -181,6 +189,21 @@
             </div>
         </div>
         <!--background section ends-->
+        <div class="join-us">
+            <div class="join-us-left">
+                <h1>Knowledge is power</h1>
+                <p>Knowledge is power. Transform your career by mastering IT skills with our tailored courses for non-IT
+                    students. Empower yourself with the technical knowledge needed to succeed in the digital age.</p>
+                <div class="buttons">
+                    <a href="Courses.html" class="join-free">Explore Courses</a>
+                    <a href="#" class="business">Join our community</a>
+                </div>
+            </div>
+            <div class="join-us-right">
+                <img src="./image/Community.png" alt="">
+            </div>
+        
+        </div>
         <!--career section starts-->
         <div class="careers">
             <h1>Boost Your Career with Our Free Tools and Assessments</h1>
@@ -216,19 +239,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="join-us">
-            <div class="join-us-left">
-                <h1>Knowledge is power</h1>
-                <p>Knowledge is power. Transform your career by mastering IT skills with our tailored courses for non-IT
-                    students. Empower yourself with the technical knowledge needed to succeed in the digital age.</p>
-                <div class="buttons">
-                    <a href="Courses.html" class="join-free">Explore Courses</a>
-                    <a href="#" class="business">Join our community</a>
-                </div>
-            </div>
-        
         </div>
     </section>
     <!--careers section ends-->
