commit by anurag

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="header">
         <div class="logo">
-            <a href="home.html">TechNewbies</a>
+            <a href="index.html">TechNewbies</a>
             <form action="" method="post" class="search-form">
                 <input type="text" name="search_box" placeholder="search courses..." required>
                 <button type="submit" class="fas fa-search" name="search_box"></button>
@@ -200,7 +200,7 @@
                 </div>
             </div>
             <div class="join-us-right">
-                <img src="./image/Community.png" alt="">
+                <img src="./image/achievement.png" alt="">
             </div>
         
         </div>
@@ -242,7 +242,49 @@
         </div>
     </section>
     <!--careers section ends-->
-    <!--footer section ends-->
+    <!--quote section starts-->
+    <div class="join-us">
+        <div class="join-us-left">
+            <h1>Knowledge is power</h1>
+            <p>Knowledge is power. Transform your career by mastering IT skills with our tailored courses for non-IT
+                students. Empower yourself with the technical knowledge needed to succeed in the digital age.</p>
+            <div class="buttons">
+                <a href="Courses.html" class="join-free">Explore Courses</a>
+                <a href="#" class="business">Join our community</a>
+            </div>
+        </div>
+        <div class="join-us-right">
+            <img src="./image/achievement.png" alt="">
+        </div>
+    
+    </div>
+    <!--quote section ends-->
+    <!--candidate section starts-->
+    <div class="candidate-section">
+        <h1>From the TechNewbies community</h1>
+        <h3>72+ millions have already joined TechNewbies</h3>
+        <div class="candidate-list">
+            <div class="candidate">
+            <img src="./image/profilepic01.png" alt="" style="height: 8rem;">
+            <h4>Name</h4>
+            <h5>country</h5>
+            <p>I really like free courses on TechNewbies</p>
+        </div>
+        <div class="candidate">
+            <img src="./image/profilepic01.png" alt="" style="height: 8rem;">
+            <h4>Name</h4>
+            <h5>country</h5>
+            <p>I really like free courses on TechNewbies</p>
+        </div>
+        <div class="candidate">
+            <img src="./image/profilepic01.png" alt="" style="height: 8rem;">
+            <h4>Name</h4>
+            <h5>country</h5>
+            <p>I really like free courses on TechNewbies</p>
+        </div>
+    </div>
+    <!--candidate section ends-->
+    <!--footer section starts-->
     <footer>
         <div class="footer-container">
             <div class="footer-row">
